--- a/portfolio.html
+++ b/portfolio.html
@@ -59,13 +59,13 @@
                     <i class="fa-solid fa-backward" id="backBtn"></i>
                         <div class="gallery">
                             <div>
-                                <span><img src="project2img1.png" ></span>
+                                <span><img src="photos/project2img1.png" ></span>
                             </div>
                             <div>
-                                <span><img src="project2img2.png" ></span>
+                                <span><img src="photos/project2img2.png" ></span>
                             </div>
                             <div>
-                                <span><img src="project2img3.png" ></span>
+                                <span><img src="photos/project2img3.png" ></span>
                             </div>
                         </div>
                     <i class="fa-solid fa-forward" id="nextBtn"></i>
