--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,8 @@
         
         <nav>
             <ul>
-                <li><a href="portfolio.html">Unity Games</a></li>
-                <li><a href="contact.html">3D Modeling</a></li>
-                <li><a href="aboutMe.html">Unreal</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
 
