--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 
         <div class="row">
             <div class="col-4">
-                <h1>Project 1</h1>
+                <h1>First Blender Project</h1>
                 <p>This was my first time making an animation that I made with Blender, and I am super happy with it.</p>
                 <br>
             </div>
@@ -39,6 +39,17 @@
                     <source src="FinalAnimation.mp4" type="video/ogg">
                     Your browser does not support HTML video.
                 </video>
+            </div>
+            <br>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <h1>Custom Gun</h1>
+                <p>One of my friends made a concept art for a gun that would be used in a game. This was the pistol that the main villains would use.</p>
+                <br>
+            </div>
+            <div class="col-8">
+                <img src="photos/PEST_Pistol.png" alt="PEST Concept Pistol"/>
             </div>
             <br>
         </div>
