--- a/index.html
+++ b/index.html
@@ -6,19 +6,37 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/0f0912f339.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="nav">
+        <button type="button" class="nav-close">
+            <i class="fa-solid fa-xmark" size="large"></i>
+        </button>
+
+        <div class="nav-links-container">
+            <a href="index.html" class="nav-link">
+                <span class='nav-text'>Home</span>
+                <i class="fa-solid fa-house" size="large"></i>
+            </a>
+            <a href="portfolio.html" class="nav-link">
+                <span class='nav-text'>Portfolio</span>
+                <i class="fa-solid fa-briefcase" size="large"></i>
+            </a>
+            <a href="contact.html" class="nav-link">
+                <span class='nav-text'>Contact</span>
+                <i class="fa-solid fa-address-book" size="large"></i>
+            </a>
+        </div>
     </nav>
     
     <div class="container">
         <div class="row">
-            <div class="col-md">
+            <div class="col-md-2">
+                <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
+            </div>
+            <div class="col-md-10">
                 <h1>Charlie Bekendam</h1>
             </div>
         </div>
@@ -37,5 +55,14 @@
             </div>
         </div>
     </div>
+    <script>
+        function toggleNav() {
+            document.body.classList.toggle("nav-open");
+        }
+
+        document.querySelector(".nav-close").addEventListener("click", () => {
+            toggleNav();
+        })
+    </script>
 </body>
 </html>
