--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/charlie-bekendam/">Charlie Bekendam LinkedIn</a></p>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-md">
+                <h3>About Me</h3> <br>
+
+                <p>If I am not doign school work, I usually am enjoying the outdoors with camping, fishing, or snowboarding! I also have a passion for gaming, coding and art and try to do as much with it as possible.</p>
+            </div>
+        </div>
     </div>
     <script>
         function toggleNav() {
