--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,23 @@
             <div class="row">
                 <div class="col-4">
                     <h1>Fly Tying Simulator</h1>
-                    <p>I am actively working on a simulator game about tying fly fishing products for customers. I do not have any pictures yet, but once I get some models created for it I will be sure to post them.</p>
+                    <p>I am actively working on a simulator game about tying fly fishing products for customers. This is a prototype for my final for school. I will continue working on this over the next year!</p>
+                </div>
+                <div class="col-8 embed-responsive embed-responsive-16by9">
+                    <video width="400" class="object-fit-contain" controls>
+                        <source src="FlyTyingGame.mp4" type="video/mp4">
+                        <source src="FlyTyingGame.mp4" type="video/ogg">
+                        Your browser does not support HTML video.
+                    </video>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-4">
+                    <h1>Mobile Accounting Game</h1>
+                    <p>I am also working on a mobile game with my dad that will teach accounting in bite size parts to maximize learning. This is still very work in progress, so I don't have any photos, but I will make sure to update with photos when 
+                        I work more on the prototype. 
+                    </p>
                 </div>
             </div>
         </div>
