--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
         <div class="row">
-            <div class="col-md">
+            <div class="col-md larger-text">
                 <h3>About Me</h3> <br>
 
                 <p>If I am not doign school work, I usually am enjoying the outdoors with camping, fishing, or snowboarding! I also have a passion for gaming, coding and art and try to do as much with it as possible.</p>
