--- a/contact.html
+++ b/contact.html
@@ -43,18 +43,18 @@
         
 
         <div class="row">
-            <div class="md-col">
+            <div class="md-col larger-text">
                 <img src="photos/Me.jpeg" alt="photo of Charlie Bekendam" />
                 <h3>Hello, My name is Charlie Bekendam. I am a student at Boise State Univerity going for a bachelor's degree in GIMM A.K.A. Game Development</h3>
-                <p>I love 3d modeling and have found enjoyment in scripting in Unity. I have dabbled in Unreal and want to get better. 
-                    You can take a look at the portfolio page to see some of the projects that I have done</p>
+                <h4>I love 3d modeling and have found enjoyment in scripting in Unity. I have dabbled in Unreal and want to get better.  
+                    You can take a look at the portfolio page to see some of the projects that I have done.<br>
 
-                <p>Some of my hobbies are playing video games, fly fishing, and working out.</p>
-                <p>I play a mix of games, but a lot of racing games, simulation games, and fps games.</p>
+                Some of my hobbies are playing video games, fly fishing, and working out. <br>
+                I play a mix of games, but a lot of racing games, simulation games, and fps games.<br>
 
-                <p>If you want to get in touch with me, you can send me an email, or give me a call</p>
+                If you want to get in touch with me, you can send me an email, or give me a call<br>
 
-                <p>Email: <a href="mailto: charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a>, my phone number is +1(208)867-1083.</p>
+                Email: <a href="mailto: charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a>, my phone number is +1 (208) 867 - 1083.</h4>
             </div>
         </div>
     </div>
