--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <div class="col-md-2">
                 <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 page-div">
                 <h1>Contact</h1>
             </div>
         </div>
@@ -53,6 +53,9 @@
                 I play a mix of games, but a lot of racing games, simulation games, and fps games.<br>
 
                 If you want to get in touch with me, you can send me an email, or give me a call<br>
+
+                I've started to get into Environment 3D modeling and prop 3D modeling. I hope to practice more and get better at those things, especially with a 3D modeling class, 
+                and just by practicing more. <br><br>
 
                 Email: <a href="mailto: charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a>, my phone number is +1 (208) 867 - 1083.</h4>
             </div>
