--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         
         <div class="row">
             <div class="col-md">
-                <p>Email: <a href="mailto:charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/charlie-bekendam/">Charlie Bekendam LinkedIn</a></p>
+                <p class="larger-text">Email: <a href="mailto:charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a> <br>
+                LinkedIn: <a href="https://www.linkedin.com/in/charlie-bekendam/">Charlie Bekendam LinkedIn</a></p>
             </div>
         </div>
 
@@ -60,7 +60,7 @@
             <div class="col-md larger-text">
                 <h3>About Me</h3> <br>
 
-                <p>If I am not doign school work, I usually am enjoying the outdoors with camping, fishing, or snowboarding! I also have a passion for gaming, coding and art and try to do as much with it as possible.</p>
+                <h4>If I am not doing school work, I usually am enjoying the outdoors with camping, fishing, or snowboarding! I also have a passion for gaming, coding and art and try to do as much with it as possible.</h4>
             </div>
         </div>
     </div>
