--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,8 @@
             <div class="row">
                 <div class="col-4">
                     <h1>First Blender Project</h1>
-                    <p>This was my first time making an animation that I made with Blender, and I am super happy with it.</p>
+                    <p>This is a very short animation that I made over the summer, it was the first animation that I made. 
+                        I learned a lot about skeletons, animation, and weight with animation. It was fun because it was the first time, and I got to learn a lot with it.</p>
                     <br>
                 </div>
                 <div class="col-8 embed-responsive embed-responsive-16by9">
@@ -63,7 +64,9 @@
             <div class="row">
                 <div class="col-4">
                     <h1>Custom Gun</h1>
-                    <p>One of my friends made a concept art for a gun that would be used in a game. This was the pistol that the main villains would use.</p>
+                    <p>This is a concept design for a character that my friend was wanting to make as the weapon of the main villain of a game idea that they had. I learned a lot about blender, 
+                        and using reference photos to make a product I was happy with. It was the first time that I worked on a weapon, and used a couple of add-ons to make 
+                        better topography and smoother parts of the gun.</p>
                     <br>
                 </div>
                 <div class="col-8">
@@ -79,7 +82,7 @@
             <div class="row">
                 <div class="col-4">
                     <h1>Learning to Be a Pilot</h1>
-                    <p>This was a project that I did with 3 other people in my class. Our goal was to use a vr headset and show a 360 video that we made. I was the 3d modeler and did some UI and some video editing for it.</p>
+                    <p>This project was with 3 others, its purpose was to utilize 360 video and have the user go inside a cessna and learn how to fly. I was the main 3D developer, video editor, and did some UI. It was fun to work in a group and be able to do 3D modeling and get more experience with Adobe Premiere Pro.</p>
                     <br>
                 </div>
                 <div class="col-8">
@@ -104,7 +107,10 @@
             <div class="row">
                 <div class="col-4">
                     <h1>Fly Tying Simulator</h1>
-                    <p>I am actively working on a simulator game about tying fly fishing products for customers. This is a prototype for my final for school. I will continue working on this over the next year!</p>
+                    <p>This is a game that I am working on for my final capstone game. At the end, the entire thing will be made by me. So far, I have made a prototype, utilizing some game mechanics 
+                        I hope to use in the final version, and made some 3D models to simulate what I want the end product to look like. 
+                        I practiced my coding techniques by making the code more modular to be used by multiple objects, 
+                        and I practiced more with 3D modeling. It has been fun making this game because it is something that I have wanted for a long time, and I get to make my dream into an actual product. </p>
                 </div>
                 <div class="col-8 embed-responsive embed-responsive-16by9">
                     <video width="400" class="object-fit-contain" controls>
