--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@
     </nav>
     
     <div class="container">
-        <div class="row">
-            <div class="col-md-2">
+        <div class="row page-div">
+            <div class="col-md-1">
                 <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
             </div>
-            <div class="col-md-10 page-div">
+            <div class="col-md-11 page-div">
                 <h1>Contact</h1>
             </div>
         </div>
