--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,11 @@
     <main class="main">
 
         <div class="container">
-            <div class="row">
-                <div class="col-md-2">
+            <div class="row page-div">
+                <div class="col-md-1">
                     <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-11">
                     <h1>Portfolio</h1>
                 </div>
             </div>
