--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     <main class="main">
 
         <div class="container">
-            <div class="row page-div">
+            <div class="row">
                 <div class="col-md-1">
                     <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
                 </div>
