--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     
     <div class="container">
-        <div class="row page-div">
+        <div class="row">
             <div class="col-md-1">
                 <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
             </div>
