--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         
         <div class="row">
             <div class="col-md">
-                <h3>Hello! Welcome to my website. My name is Charlie Bekendam and I am going to Boise State Univerity for a bachelor's degree in GIMM A.K.A Video Game Development.</h3>
-                <p>Feel free to contact me if you would like to get in touch!</p>
+                <h3>Hello! Welcome to my website. My name is Charlie Bekendam and I am going to Boise State University for a bachelor's degree in GIMM A.K.A Video Game Development. I would like to work in the gaming industry, either as a 3D environmental artist, or as a game programmer.</h3>
+                <p>Feel free to contact me if you would like to get in touch!
+                    <br>
+                    This is my portfolio website. 
+                </p>
             </div>
         </div>
         
@@ -60,7 +63,11 @@
             <div class="col-md larger-text">
                 <h3>About Me</h3> <br>
 
-                <h4>If I am not doing school work, I usually am enjoying the outdoors with camping, fishing, or snowboarding! I also have a passion for gaming, coding and art and try to do as much with it as possible.</h4>
+                <h4>If I am not doing school work, I usually am enjoying the outdoors with camping, fishing, or snowboarding! 
+                    I also have a passion for gaming, coding, and art and try to do as much with it as possible. I've worked with C# a lot and am able to adapt to different languages with relative ease. 
+                    I love playing with friends when playing games, I enjoy the creativity I am able to use in art, 
+                    and I love the challenge that coding brings and the amount of personal gratification that I get when completing something difficult with code. 
+                    I am working on multiple games currently, one of which I am doing by myself and the other with a couple of friends.</h4>
             </div>
         </div>
     </div>
