--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <div class="md-col larger-text">
                 <img src="photos/Me.jpeg" alt="photo of Charlie Bekendam" />
                 <h3>Hello, My name is Charlie Bekendam. I am a student at Boise State Univerity going for a bachelor's degree in GIMM A.K.A. Game Development</h3>
-                <h4>I love 3d modeling and have found enjoyment in scripting in Unity. I have dabbled in Unreal and want to get better.  
+                <p>I love 3d modeling and have found enjoyment in scripting in Unity. I have dabbled in Unreal and want to get better.  
                     You can take a look at the portfolio page to see some of the projects that I have done.<br>
 
                 Some of my hobbies are playing video games, fly fishing, and working out. <br>
@@ -57,7 +57,7 @@
                 I've started to get into Environment 3D modeling and prop 3D modeling. I hope to practice more and get better at those things, especially with a 3D modeling class, 
                 and just by practicing more. <br><br>
 
-                Email: <a href="mailto: charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a>, my phone number is +1 (208) 867 - 1083.</h4>
+                Email: <a href="mailto: charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a>, my phone number is +1 (208) 867 - 1083.</p>
             </div>
         </div>
     </div>
