--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="nav">
-        <button type="button" class="nav-close">
+        <button type="button" class="nav-close" value="Navigation-Close">
             <i class="fa-solid fa-xmark" size="large"></i>
         </button>
 
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-1">
-                <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
+                <button type="button" onclick="toggleNav()" value="Navigation-open"><i class="fa-solid fa-bars"></i></button>
             </div>
             <div class="col-md-11 page-div">
                 <h1>Contact</h1>
@@ -43,7 +43,7 @@
         
 
         <div class="row">
-            <div class="md-col larger-text">
+            <div class="md-col larger-text contact-links">
                 <img src="photos/Me.jpeg" alt="photo of Charlie Bekendam" />
                 <h3>Hello, My name is Charlie Bekendam. I am a student at Boise State Univerity going for a bachelor's degree in GIMM A.K.A. Game Development</h3>
                 <p>I love 3d modeling and have found enjoyment in scripting in Unity. I have dabbled in Unreal and want to get better.  
