--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="nav">
-        <button type="button" class="nav-close">
+        <button type="button" class="nav-close" value="Navigation-close">
             <i class="fa-solid fa-xmark" size="large"></i>
         </button>
 
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-1">
-                <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
+                <button type="button" onclick="toggleNav()" value="Navigation-open"><i class="fa-solid fa-bars"></i></button>
             </div>
             <div class="col-md-11">
                 <h1>Charlie Bekendam</h1>
@@ -51,7 +51,7 @@
         </div>
         
         <div class="row">
-            <div class="col-md larger-text">
+            <div class="col-md larger-text contact-links">
                 <p class="larger-text">Email: <a href="mailto:charlie.bekendam@gmail.com">charlie.bekendam@gmail.com</a> <br>
                 LinkedIn: <a href="https://www.linkedin.com/in/charlie-bekendam/">Charlie Bekendam LinkedIn</a></p>
             </div>
