--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,6 @@
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/0f0912f339.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -16,7 +15,7 @@
 
 <body>
     <nav class="nav">
-        <button type="button" class="nav-close">
+        <button type="button" class="nav-close" value="Navigation-close">
             <i class="fa-solid fa-xmark" size="large"></i>
         </button>
 
@@ -39,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-1">
-                    <button type="button" onclick="toggleNav()"><i class="fa-solid fa-bars"></i></button>
+                    <button type="button" onclick="toggleNav()" value="Navigation-open"><i class="fa-solid fa-bars"></i></button>
                 </div>
                 <div class="col-md-11">
                     <h1>Portfolio</h1>
