--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
         <div class="row">
             <div class="md-col larger-text contact-links">
-                <img src="photos/Me.jpeg" alt="photo of Charlie Bekendam" />
+                <img src="photos/Me.jpeg" alt="photo of Charlie Bekendam" class="img-fluid" />
                 <h3>Hello, My name is Charlie Bekendam. I am a student at Boise State Univerity going for a bachelor's degree in GIMM A.K.A. Game Development</h3>
                 <p>I love 3d modeling and have found enjoyment in scripting in Unity. I have dabbled in Unreal and want to get better.  
                     You can take a look at the portfolio page to see some of the projects that I have done.<br>
