--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                 <hr>
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-55">
                         <h1>Learning to Be a Pilot</h1>
                         <p>This project was with 3 others, its purpose was to utilize 360 video and have the user go
                             inside a cessna and learn how to fly. I was the main 3D developer, video editor, and did
@@ -58,7 +58,7 @@
                             with Adobe Premiere Pro.</p>
                         <br>
                     </div>
-                    <div class="col-8">
+                    <div class="col-md-7">
                         <div class="gallery-wrap">
                             <i class="fa-solid fa-backward" id="backBtn"></i>
                             <div class="gallery">
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-5">
                         <h1>Fly Tying Simulator</h1>
                         <p>This is a game that I am working on for my final capstone game. At the end, the entire thing
                             will be made by me. So far, I have made a prototype, utilizing some game mechanics
@@ -90,7 +90,7 @@
                             something that I have wanted for a long time, and I get to make my dream into an actual
                             product. </p>
                     </div>
-                    <div class="col-8 embed-responsive embed-responsive-16by9">
+                    <div class="col-md-7 embed-responsive embed-responsive-16by9">
                         <video width="400" class="object-fit-contain" controls>
                             <source src="FlyTyingGame.mp4" type="video/mp4">
                             <source src="FlyTyingGame.mp4" type="video/ogg">
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-">
                         <h1>Mobile Accounting Game</h1>
                         <p>I am also working on a mobile game with my dad that will teach accounting in bite size parts
                             to maximize learning. This is still very work in progress, so I don't have any photos, but I
@@ -116,7 +116,7 @@
                 <hr>
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <h1>First Blender Project</h1>
                         <p>This is a very short animation that I made over the summer, it was the first animation that I
                             made.
@@ -124,7 +124,7 @@
                             was the first time, and I got to learn a lot with it.</p>
                         <br>
                     </div>
-                    <div class="col-8 embed-responsive embed-responsive-16by9">
+                    <div class="col-md-8 embed-responsive embed-responsive-16by9">
                         <video width="400" class="object-fit-contain" controls>
                             <source src="FinalAnimation.mp4" type="video/mp4">
                             <source src="FinalAnimation.mp4" type="video/ogg">
@@ -134,7 +134,7 @@
                     <br>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <h1>Custom Gun</h1>
                         <p>This is a concept design for a character that my friend was wanting to make as the weapon of
                             the main villain of a game idea that they had. I learned a lot about blender,
@@ -143,7 +143,7 @@
                             better topography and smoother parts of the gun.</p>
                         <br>
                     </div>
-                    <div class="col-8">
+                    <div class="col-md-8">
                         <img src="photos/PEST_Pistol.png" alt="PEST Concept Pistol" class='img-fluid' />
                     </div>
                     <br>
