Updated Index.html with new animation.

--- a/index.html
+++ b/index.html
@@ -152,12 +152,13 @@
 
         .abacus-bead.active {
             background: linear-gradient(145deg, #d4af37, #b8941f);
-            transform: translateX(10px);
+            transform: scale(1.2);
+            box-shadow: 0 0 15px rgba(212, 175, 55, 0.6), 0 2px 4px rgba(0,0,0,0.3);
         }
 
         .abacus-bead.inactive {
             background: linear-gradient(145deg, #654321, #4a2c17);
-            transform: translateX(-10px);
+            transform: scale(1);
         }
 
         .abacus-label {
