--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Charlie Bekendam — Portfolio</title>
   <meta name="description" content="Personal portfolio of Charlie Bekendam — developer, designer, and builder." />
   <meta name="color-scheme" content="light dark">
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <a href="#content" class="skip-link">Skip to content</a>
