--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
           <a href="#contact">Contact</a>
-          <a class="btn secondary" href="#" download>Résumé</a>
+          <a class="btn secondary" href="Charlie Bekendam Resume 9_2025.pdf" download>Résumé</a>
         </div>
       </nav>
     </div>
