Fixed Resume download

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
           <li class="nav-actions">
-            <a class="btn secondary" href="#" download title="Download résumé (replace with your file)">Résumé</a>
+            <a class="btn secondary" href="Charlie Bekendam Resume 9_2025.pdf" download title="Charlie Bekendam Resume">Résumé</a>
             <button class="theme-toggle" id="themeToggle" aria-pressed="false" title="Toggle theme">🌗 <span class="sr-only">Toggle theme</span></button>
           </li>
         </ul>
