--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div>
           <h2 class="section-title">About</h2>
-          <p>Hi! I'm <strong>Charlie Bekendam</strong>. I'm a multidisciplinary developer who loves making great and fun products. I combine a background in interactive media with strong engineering habits to build things that feel great and scale.</p>
+          <p>Hi! I'm <strong>Charlie Bekendam</strong>! I'm a multidisciplinary developer who loves making great and fun products. I combine a background in interactive media with strong engineering habits to build things that feel great and scale.</p>
           <p>I care about accessibility, ethical design, and clear documentation. I love to enjoy the outdoors and make things with my friends in my freetime.</p>
           <div class="chips">
             <span class="badge">Open to freelance</span>
