Add devlog system and project overview pages
Introduces a devlog system with searchable/filterable entries, adds devlog-entry.html for individual updates, and refactors project pages (Current_Project_Code.html, SoloGolfGame.html) to show project overview and devlog lists. Moves main.js to scripts/main.js, adds scripts/devlogs.js for devlog logic, updates script references, and enhances styles for devlog controls and project layouts.

--- a/CheckoutAppProject.html
+++ b/CheckoutAppProject.html
@@ -170,6 +170,6 @@
     <img class="lightbox-img" alt="">
   </div>
 
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
