--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
       <a href="#home" class="btn ghost">Back to top ↑</a>
     </div>
   </footer>
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
