Update Golf Game assets and project references
Added new image assets for the Golf Game project and updated SoloGolfGame.html to reference these assets. Renamed charity: water images and updated landingpage.html to use new paths. Cleaned up placeholder image references in CheckoutAppProject.html.

--- a/CheckoutAppProject.html
+++ b/CheckoutAppProject.html
@@ -11,7 +11,7 @@
 <body>
   <a href="#content" class="skip-link">Skip to content</a>
 
-  <!-- Reuse your header exactly -->
+  <!-- ? Reuse the header exactly -->
   <header>
     <div class="container nav">
       <div class="brand">
@@ -60,7 +60,7 @@
         </div>
 
         <div class="card project-hero">
-          <img src="images/projects/sample/cover.jpg" alt="Cover image for Project Title Here" />
+          <img src="" alt="Cover image for Project Title Here" />
         </div>
       </div>
     </section>
@@ -109,11 +109,11 @@
             <p>Show how you approached the work. Include prototypes, iterations, code snippets, and reasoning.</p>
             <div class="grid cols-2">
               <figure class="card">
-                <img src="images/projects/sample/process-1.jpg" alt="Prototype iteration 1" />
+                <img src="" alt="Prototype iteration 1" />
                 <figcaption class="caption">Early blockout for interaction flow.</figcaption>
               </figure>
               <figure class="card">
-                <img src="images/projects/sample/process-2.jpg" alt="Prototype iteration 2" />
+                <img src="" alt="Prototype iteration 2" />
                 <figcaption class="caption">Material test for stylized look.</figcaption>
               </figure>
             </div>
@@ -122,15 +122,16 @@
           <section class="project-section">
             <h2>Gallery</h2>
             <p class="section-sub">Click any image to view larger.</p>
-            <div class="grid cols-3 lightbox-grid" data-lightbox>
-              <button class="card lightbox-item" data-src="images/projects/sample/shot-1.jpg" title="Open image 1">
-                <img src="images/projects/sample/shot-1_thumb.jpg" alt="Gameplay screenshot 1" />
+            <div class="grid cols-3 lightbox-grid" data-lightbox> 
+              <!-- ! Add the same src to the data-src when adding photos -->
+              <button class="card lightbox-item" data-src="" title="Open image 1">
+                <img src="" alt="Gameplay screenshot 1" />
               </button>
-              <button class="card lightbox-item" data-src="images/projects/sample/shot-2.jpg" title="Open image 2">
-                <img src="images/projects/sample/shot-2_thumb.jpg" alt="Gameplay screenshot 2" />
+              <button class="card lightbox-item" data-src="" title="Open image 2">
+                <img src="" alt="Gameplay screenshot 2" />
               </button>
-              <button class="card lightbox-item" data-src="images/projects/sample/shot-3.jpg" title="Open image 3">
-                <img src="images/projects/sample/shot-3_thumb.jpg" alt="Gameplay screenshot 3" />
+              <button class="card lightbox-item" data-src="" title="Open image 3">
+                <img src="" alt="Gameplay screenshot 3" />
               </button>
             </div>
           </section>
@@ -167,7 +168,7 @@
 
   <div id="lightbox" class="lightbox" hidden>
     <button class="lightbox-close" aria-label="Close">✕</button>
-    <img class="lightbox-img" alt="">
+    <img class="" alt="">
   </div>
 
   <script src="scripts/main.js"></script>
