--- a/SoloGolfGame.html
+++ b/SoloGolfGame.html
@@ -124,41 +124,41 @@
         {
           id: "2025-09-golf-idea",
           title: "Golf Game: Shaping the Core Idea",
-          date: "2025-09-01",
+          date: "2025-09-05",
           tags: ["Design","Concept","Brainstorming"],
-          summary: "Early brainstorming of a quirky, low‑poly multiplayer golf game inspired by Big Walk’s visual humor.",
-          thumb: "images/projects/golfgame/idea-thumb.jpg",
-          hero: "images/projects/golfgame/idea-hero.jpg",
+          summary: "Early brainstorming of a new low-poly multiplayer golf game inspired by Big Walk & peak's visuals.",
+          thumb: "images/projects/GolfGame/adobeStock_Idea.jpg",
+          hero: "images/projects/GolfGame/refImages_GolfGame.png",
           url: "devlog-entry.html?id=2025-09-golf-idea&project=golfgame",
-          html: `<h2>Problem</h2><p>We wanted a unique take on golf that balanced casual fun with multiplayer chaos.</p>
-          <h2>Approach</h2><p>Took cues from games like Big Walk and party titles—decided on stylized visuals, oversized clubs, and silly animations.</p>
-          <h2>Notes</h2><ul><li>Scope set for 2–4 players.</li><li>Prototype visuals to guide tone.</li></ul>`
+          html: `<h2>Idea</h2><p>I thought for a while about what I wanted to do for a multiplayer game. Something that my creativity could go crazy.</p>
+          <h2>Approach</h2><p>Had inspiration from games like Big Walk and Peak on stylized visuals, gameplay, and silly animations.</p>
+          <h2>Notes</h2><ul><li>Scope is set for 2-4 players.</li><li>Prototype visuals to guide tone.</li></ul>`
         },
         {
           id: "2025-09-golf-character",
           title: "Golf Game: First Character Build",
-          date: "2025-09-03",
+          date: "2025-09-06",
           tags: ["3D Modeling","Character Design","Low Poly"],
-          summary: "Modeled the first playable character: a goofy, chunky golfer to fit the low‑poly aesthetic.",
-          thumb: "images/projects/golfgame/char-thumb.jpg",
-          hero: "images/projects/golfgame/char-hero.jpg",
+          summary: "Modeled the first playable character: a duck that I am currently calling Don, a golfer, to fit the low-poly aesthetic.",
+          thumb: "images/projects/GolfGame/donDuck",
+          hero: "images/projects/GolfGame/GolfGame_Characters_Concept.png",
           url: "devlog-entry.html?id=2025-09-golf-character&project=golfgame",
           html: `<h2>Overview</h2><p>The first character established the style guide for proportions, animations, and color palette.</p>
-          <h2>Process</h2><p>Blocked in Blender, kept face geometry minimal for later eye animations, textured with flat colors.</p>
-          <h2>Outcome</h2><p>Playable avatar imported into engine successfully—set the tone for other character assets.</p>`
+          <h2>Process</h2><p>Blocked in Blender, kept face geometry minimal for later eye animations, textured with flat colors. I used ChatGPT to create character concepts so I can have a good idea of the characters and world that I want to create.</p>
+          <h2>Future</h2><p>Next I hope to create the other characters that I want to implement and do some of the animations for them.</p>`
         },
         {
           id: "2025-09-golf-unreal",
           title: "Golf Game: First Steps in Unreal",
           date: "2025-09-07",
           tags: ["Unreal","Networking","Prototype"],
-          summary: "Setup Unreal project, basic golf course level, and tested initial networking for multiplayer.",
-          thumb: "images/projects/golfgame/unreal-thumb.jpg",
-          hero: "images/projects/golfgame/unreal-hero.jpg",
+          summary: "Setup Unreal project, basic golf course level, and tested initial networking for multiplayer. Image source GameSpot",
+          thumb: "images/projects/GolfGame/3833044-unrealengine.jpg",
+          hero: "images/projects/GolfGame/multiplayerGame.jpg",
           url: "devlog-entry.html?id=2025-09-golf-unreal&project=golfgame",
-          html: `<h2>Setup</h2><p>Created project in Unreal 5, integrated starter assets, configured multiplayer session framework.</p>
-          <h2>Challenges</h2><p>Hit snags with replication of ball physics, but established a testbed course to debug.</p>
-          <h2>Next Steps</h2><ul><li>Refine ball mechanics.</li><li>Implement turn order system.</li></ul>`
+          html: `<h2>Setup</h2><p>Created project in Unreal 5, integrated starter assets. Image source Ravalmatic</p>
+          <h2>Challenges</h2><p>First time diving into Unreal, so it is being a challenge to learn a new software.</p>
+          <h2>Next Steps</h2><ul><li>Implement controls.</li><li>Implement multiplayer.</li></ul>`
         }
       ]
     };
