Add main.js to HTML and improve JS error handling
Included main.js in SoloGolfGame.html for additional functionality. Added null checks in main.js to prevent errors if target DOM elements are missing.

--- a/SoloGolfGame.html
+++ b/SoloGolfGame.html
@@ -53,7 +53,7 @@
           <span class="badge">C#</span>
         </div>
         <div class="card project-hero">
-          <img src="images/projects/myproject/cover.jpg" alt="Cover for My Project" />
+          <img src="images/projects/GolfGame/GolfGame_Characters_Concept.png" alt="Cover for My Project" />
         </div>
       </div>
     </section>
@@ -164,5 +164,6 @@
     };
   </script>
   <script src="scripts/devlogs.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
