Fix image path and script order; update null checks
Corrects the image file extension for the project thumbnail and reorders script tags in SoloGolfGame.html. Updates null checks in main.js to use string literals, which may be a bug as it prevents proper element existence checking.

--- a/SoloGolfGame.html
+++ b/SoloGolfGame.html
@@ -140,7 +140,7 @@
           date: "2025-09-06",
           tags: ["3D Modeling","Character Design","Low Poly"],
           summary: "Modeled the first playable character: a duck that I am currently calling Don, a golfer, to fit the low-poly aesthetic.",
-          thumb: "images/projects/GolfGame/donDuck",
+          thumb: "images/projects/GolfGame/donDuck.png",
           hero: "images/projects/GolfGame/GolfGame_Characters_Concept.png",
           url: "devlog-entry.html?id=2025-09-golf-character&project=golfgame",
           html: `<h2>Overview</h2><p>The first character established the style guide for proportions, animations, and color palette.</p>
@@ -163,7 +163,7 @@
       ]
     };
   </script>
-  <script src="scripts/devlogs.js"></script>
   <script src="scripts/main.js"></script>
+  <script src="scripts/devlogs.js"></script>
 </body>
 </html>
